[package]
name = "latentdirichletallocation"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of Latent Dirichlet Allocation (LDA) using collapsed Gibbs sampling for topic modeling."
license-file = "LICENSE"
repository = "https://github.com/vulogov/LatentDirichletAllocation"
categories = ["text-processing"]
keywords = ["sampling", "Latent", "Dirichlet", "Allocation", "topics"]
